# polymarket-rn1-bot

./: Cargo.toml  README.md  config.json
ai_training/: train.py
src/: ai_client.rs  logger.rs
src/client/: pmxt_ws_pool.rs  sportradar.rs  sports_ws.rs  sportsdataio.rs  websocket.rs
src/order/: paper_executor.rs
src/strategy/: mod.rs
